--- a/view/index/index.html
+++ b/view/index/index.html
@@ -43,7 +43,7 @@
                 <li class="layui-nav-item layuimini-setting">
                     <a href="javascript:;">
                         <img src="" class="layui-nav-img" width="50" height="50">
-                        <cite class="adminName">{:session('admin.username')}</cite>
+                        <cite class="adminName"></cite>
                         <span class="layui-nav-more"></span>
                     </a>
                     <dl class="layui-nav-child">
