--- a/view/layout/default.html
+++ b/view/layout/default.html
@@ -14,9 +14,9 @@
     <link rel="stylesheet" href="/static/css/public.css?v={$version}" media="all">
     <script>
         window.CONFIG = {
-            CONTROLLER_JS_PATH: "js/index.js",
+            CONTROLLER_JS_PATH: "js/log.js",
             ACTION: "index",
-            AUTOLOAD_JS: "/static/js/index.js",
+            AUTOLOAD_JS: "/static/js/log.js",
             IS_SUPER_ADMIN: "false",
             VERSION: "1.0.0",
         };
