--- a/view/index/index.html
+++ b/view/index/index.html
@@ -1,6 +1,6 @@
 {{ define "index/index.html" }}
 
-{{ template "header" }}
+{{ template "header" . }}
 
 <link rel="stylesheet" href="/static/plugs/lay-module/layuimini/layuimini.css?v={:time()}" media="all">
 <link rel="stylesheet" href="/static/plugs/lay-module/layuimini/themes/default.css?v={:time()}" media="all">
