--- a/view/index/welcome.html
+++ b/view/index/welcome.html
@@ -1,6 +1,6 @@
 {{ define "index/welcome.html" }}
 
-{{ template "header" }}
+{{ template "header" . }}
 
 <link rel="stylesheet" href="/static/css/welcome.css?v={:time()}" media="all">
 <div class="layuimini-container">
