--- a/view/layout/default.html
+++ b/view/layout/default.html
@@ -21,7 +21,7 @@
             CONTROLLER_JS_PATH: jspath,
             ACTION: action,
             AUTOLOAD_JS: autoloadjs,
-            IS_SUPER_ADMIN: false,
+            IS_SUPER_ADMIN: 1,
             VERSION: "1.0.0",
         };
     </script>
