--- a/view/index/index.html
+++ b/view/index/index.html
@@ -84,11 +84,11 @@
     <div class="layuimini-site-mobile"><i class="layui-icon"></i></div>
 
     <div class="layui-body">
-        <div class="layuimini-tab layui-tab-rollTool layui-tab" lay-filter="layuiminiTab" lay-allowclose="true">
+        <div class="layuimini-tab layui-tab-rollTool layui-tab" lay-filter="layuiminiTab">
             <ul class="layui-tab-title">
                 <li class="layui-this" id="layuiminiHomeTabId" lay-id=""></li>
             </ul>
-            <div class="layui-tab-control">
+            <!-- <div class="layui-tab-control">
                 <li class="layuimini-tab-roll-left layui-icon layui-icon-left"></li>
                 <li class="layuimini-tab-roll-right layui-icon layui-icon-right"></li>
                 <li class="layui-tab-tool layui-icon layui-icon-down">
@@ -103,7 +103,7 @@
                         </li>
                     </ul>
                 </li>
-            </div>
+            </div> -->
             <div class="layui-tab-content">
                 <div id="layuiminiHomeTabIframe" class="layui-tab-item layui-show"></div>
             </div>
