--- a/view/admin/index.html
+++ b/view/admin/index.html
@@ -1,3 +1,7 @@
+{{ define "admin/index.html"}}
+
+{{ template "header" . }}
+
 <div class="layuimini-container">
     <div class="layuimini-main">
         <table id="currentTable" class="layui-table layui-hide"
@@ -9,3 +13,4 @@
         </table>
     </div>
 </div>
+{{end}}
