--- a/view/index/index.html
+++ b/view/index/index.html
@@ -33,23 +33,18 @@
 
                 <li class="layui-nav-item layuimini-setting">
                     <a href="javascript:;">
-                        <img src="" class="layui-nav-img" width="50" height="50">
+                        <img src="/static/images/1.png" class="layui-nav-img" width="50" height="50">
                         <cite class="adminName"></cite>
                         <span class="layui-nav-more"></span>
                     </a>
                     <dl class="layui-nav-child">
                         <dd>
-                            <a href="javascript:;" layuimini-content-href="{:__url('index/editAdmin')}" data-title="基本资料" data-icon="fa fa-gears">基本资料<span class="layui-badge-dot"></span></a>
+                            <a href="javascript:;" layuimini-content-href="{:__url('index/editAdmin')}" data-title="基本资料" data-icon="fa fa-gears">基本资料</a>
                         </dd>
                         <dd>
                             <a href="javascript:;" layuimini-content-href="{:__url('index/editPassword')}" data-title="修改密码" data-icon="fa fa-gears">修改密码</a>
                         </dd>
-                        <dd>
-                            <hr>
-                        </dd>
-                        <dd>
-                            <a href="javascript:;" class="login-out">退出登录</a>
-                        </dd>
+                        <dd> <a href="javascript:;" class="login-out">退出登录</a> </dd>
                     </dl>
                 </li>
                 <li class="layui-nav-item layuimini-select-bgcolor" lay-unselect>
