--- a/view/card/index.html
+++ b/view/card/index.html
@@ -2,6 +2,7 @@
 
 {{ template "header" .}}
 
+<link rel="stylesheet" href="/static/css/dragula.min.css?v={:time()}" media="all">
 <fieldset class="layui-elem-field layui-field-title" style="margin-top: 20px;">
   <legend>卡片面板</legend>
 </fieldset>   
@@ -11,7 +12,7 @@
     <div class="layui-col-md4">
       <div class="layui-card">
         <div class="layui-card-header">卡片面板1</div>
-        <div class="layui-card-body">
+        <div class="layui-card-body drag" id="handle-list-1">
           <blockquote class="layui-elem-quote layui-quote-grey">AAAAAAAAAAAAAAAAAAAAAA</blockquote>
           <blockquote class="layui-elem-quote layui-quote-grey">VVVVVVVVVVVVVVVVVVVVVVV</blockquote>
         </div>
@@ -19,9 +20,9 @@
     </div>
 
     <div class="layui-col-md4">
-      <div class="layui-card">
+      <div class="layui-card" >
         <div class="layui-card-header">卡片面板2</div>
-        <div class="layui-card-body">
+        <div class="layui-card-body drag" id="handle-list-2">
           <blockquote class="layui-elem-quote layui-quote-ori">CCCCCCCCCCCCCCCCCCC</blockquote>
           <blockquote class="layui-elem-quote layui-quote-ori">DDDDDDDDDDDDDDDDDDDDDDDDDDD</blockquote>
 
@@ -32,7 +33,7 @@
     <div class="layui-col-md4">
       <div class="layui-card">
         <div class="layui-card-header">卡片面板3</div>
-        <div class="layui-card-body">
+        <div class="layui-card-body drag">
           <blockquote class="layui-elem-quote">CCCCCCCCCCCCCCCCCCC</blockquote>
           <blockquote class="layui-elem-quote">DDDDDDDDDDDDDDDDDDDDDDDDDDD</blockquote>
 
