--- a/view/card/index.html
+++ b/view/card/index.html
@@ -3,25 +3,22 @@
 {{ template "header" .}}
 
 <link rel="stylesheet" href="/static/css/dragula.min.css?v={:time()}" media="all">
-<fieldset class="layui-elem-field layui-field-title" style="margin-top: 20px;">
-  <legend>卡片面板</legend>
-</fieldset>   
  
 <div style="padding: 20px; background-color: #F2F2F2;">
   <div class="layui-row layui-col-space15">
     <div class="layui-col-md4">
       <div class="layui-card">
-        <div class="layui-card-header">卡片面板1</div>
+        <div class="layui-card-header">未开始</div>
         <div class="layui-card-body drag" id="handle-list-1">
           <blockquote class="layui-elem-quote layui-quote-grey">AAAAAAAAAAAAAAAAAAAAAA</blockquote>
-          <blockquote class="layui-elem-quote layui-quote-grey">VVVVVVVVVVVVVVVVVVVVVVV</blockquote>
+          <blockquote class="layui-elem-quote layui-quote-grey">BBBBBBBBBBBBBBBBBBBBBB</blockquote>
         </div>
       </div>
     </div>
 
     <div class="layui-col-md4">
       <div class="layui-card" >
-        <div class="layui-card-header">卡片面板2</div>
+        <div class="layui-card-header">进行中</div>
         <div class="layui-card-body drag" id="handle-list-2">
           <blockquote class="layui-elem-quote layui-quote-ori">CCCCCCCCCCCCCCCCCCC</blockquote>
           <blockquote class="layui-elem-quote layui-quote-ori">DDDDDDDDDDDDDDDDDDDDDDDDDDD</blockquote>
@@ -32,10 +29,10 @@
     
     <div class="layui-col-md4">
       <div class="layui-card">
-        <div class="layui-card-header">卡片面板3</div>
+        <div class="layui-card-header">已完成</div>
         <div class="layui-card-body drag">
-          <blockquote class="layui-elem-quote">CCCCCCCCCCCCCCCCCCC</blockquote>
-          <blockquote class="layui-elem-quote">DDDDDDDDDDDDDDDDDDDDDDDDDDD</blockquote>
+          <blockquote class="layui-elem-quote">EEEEEEEEEEEEEEEEEEEEEEEEEEEEEEE</blockquote>
+          <blockquote class="layui-elem-quote">FFFFFFFFFFFFFFFF</blockquote>
 
         </div>
       </div>
