--- a/view/card/index.html
+++ b/view/card/index.html
@@ -8,20 +8,20 @@
   <div class="layui-row layui-col-space15">
     <div class="layui-col-md4">
       <div class="layui-card">
-        <div class="layui-card-header">未开始</div>
-        <div class="layui-card-body drag" id="handle-list-1">
-          <blockquote class="layui-elem-quote layui-quote-grey">AAAAAAAAAAAAAAAAAAAAAA</blockquote>
-          <blockquote class="layui-elem-quote layui-quote-grey">BBBBBBBBBBBBBBBBBBBBBB</blockquote>
+        <div class="layui-card-header"><span class="layui-badge layui-bg-gray">未开始</span></div>
+        <div class="layui-card-body drag" id="drag-list-1">
+          <blockquote class="layui-elem-quote">AAAAAAAAAAAAAAAAAAAAAA</blockquote>
+          <blockquote class="layui-elem-quote">BBBBBBBBBBBBBBBBBBBBBB</blockquote>
         </div>
       </div>
     </div>
 
     <div class="layui-col-md4">
       <div class="layui-card" >
-        <div class="layui-card-header">进行中</div>
-        <div class="layui-card-body drag" id="handle-list-2">
-          <blockquote class="layui-elem-quote layui-quote-ori">CCCCCCCCCCCCCCCCCCC</blockquote>
-          <blockquote class="layui-elem-quote layui-quote-ori">DDDDDDDDDDDDDDDDDDDDDDDDDDD</blockquote>
+        <div class="layui-card-header"><span class="layui-badge">进行中</span></div>
+        <div class="layui-card-body drag" id="drag-list-2">
+          <blockquote class="layui-elem-quote">CCCCCCCCCCCCCCCCCCC</blockquote>
+          <blockquote class="layui-elem-quote">DDDDDDDDDDDDDDDDDDDDDDDDDDD</blockquote>
 
         </div>
       </div>
@@ -29,8 +29,8 @@
     
     <div class="layui-col-md4">
       <div class="layui-card">
-        <div class="layui-card-header">已完成</div>
-        <div class="layui-card-body drag">
+        <div class="layui-card-header"><span class="layui-badge layui-bg-green">已完成</span></div>
+        <div class="layui-card-body drag" id="drag-list-3">
           <blockquote class="layui-elem-quote">EEEEEEEEEEEEEEEEEEEEEEEEEEEEEEE</blockquote>
           <blockquote class="layui-elem-quote">FFFFFFFFFFFFFFFF</blockquote>
 
