--- a/view/card/index.html
+++ b/view/card/index.html
@@ -10,8 +10,20 @@
       <div class="layui-card">
         <div class="layui-card-header"><span class="layui-badge layui-bg-gray">未开始</span></div>
         <div class="layui-card-body drag" id="drag-list-1">
-          <blockquote class="layui-elem-quote">AAAAAAAAAAAAAAAAAAAAAA</blockquote>
-          <blockquote class="layui-elem-quote">BBBBBBBBBBBBBBBBBBBBBB</blockquote>
+          <blockquote class="layui-elem-quote">AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA<br>----张三</blockquote>
+          <blockquote class="layui-elem-quote">
+              <div class="layui-row">
+                <div class="layui-col-sm12">
+                  <div class="content">BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB</div>
+                </div>
+                <div class="layui-col-sm9">
+                  <div class="datetime"><span class="layui-badge-rim"><i class="layui-icon layui-icon-log"></i> 2020-11-01 ~ 2020-11-03</span></div>
+                </div>
+                <div class="layui-col-sm3">
+                  <div class="user"><span class="layui-badge-rim"><i class="layui-icon layui-icon-at"></i> zhangsan</span></div>
+                </div>
+              </div>
+          </blockquote>
         </div>
       </div>
     </div>
@@ -20,7 +32,19 @@
       <div class="layui-card" >
         <div class="layui-card-header"><span class="layui-badge">进行中</span></div>
         <div class="layui-card-body drag" id="drag-list-2">
-          <blockquote class="layui-elem-quote">CCCCCCCCCCCCCCCCCCC</blockquote>
+          <blockquote class="layui-elem-quote">
+              <div class="layui-row">
+                <div class="layui-col-sm12">
+                  <div class="content">CCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCC</div>
+                </div>
+                <div class="layui-col-sm12">
+                  <div class="datetime" style="text-align: right;">
+                    <span class="layui-badge-rim"><i class="layui-icon layui-icon-log"></i> 2020-11-01 ~ 2020-11-03</span>
+                    <span class="layui-badge-rim"><i class="layui-icon layui-icon-at"></i> zhangsan</span>
+                </div>
+                </div>
+              </div>
+          </blockquote>
           <blockquote class="layui-elem-quote">DDDDDDDDDDDDDDDDDDDDDDDDDDD</blockquote>
 
         </div>
