--- a/view/card/index.html
+++ b/view/card/index.html
@@ -10,8 +10,8 @@
       <div class="layui-card">
         <div class="layui-card-header"><span class="layui-badge layui-bg-gray">未开始</span></div>
         <div class="layui-card-body drag" id="drag-list-1">
-          <blockquote class="layui-elem-quote">AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA<br>----张三</blockquote>
-          <blockquote class="layui-elem-quote">
+          <blockquote class="layui-elem-quote" id="1">AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA<br>----张三</blockquote>
+          <blockquote class="layui-elem-quote" id="2">
               <div class="layui-row">
                 <div class="layui-col-sm12">
                   <div class="content">BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB</div>
@@ -32,7 +32,7 @@
       <div class="layui-card" >
         <div class="layui-card-header"><span class="layui-badge">进行中</span></div>
         <div class="layui-card-body drag" id="drag-list-2">
-          <blockquote class="layui-elem-quote">
+          <blockquote class="layui-elem-quote" id="3">
               <div class="layui-row">
                 <div class="layui-col-sm12">
                   <div class="content">CCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCC</div>
@@ -45,7 +45,7 @@
                 </div>
               </div>
           </blockquote>
-          <blockquote class="layui-elem-quote">DDDDDDDDDDDDDDDDDDDDDDDDDDD</blockquote>
+          <blockquote class="layui-elem-quote" id="4">DDDDDDDDDDDDDDDDDDDDDDDDDDD</blockquote>
 
         </div>
       </div>
@@ -55,8 +55,8 @@
       <div class="layui-card">
         <div class="layui-card-header"><span class="layui-badge layui-bg-green">已完成</span></div>
         <div class="layui-card-body drag" id="drag-list-3">
-          <blockquote class="layui-elem-quote">EEEEEEEEEEEEEEEEEEEEEEEEEEEEEEE</blockquote>
-          <blockquote class="layui-elem-quote">FFFFFFFFFFFFFFFF</blockquote>
+          <blockquote class="layui-elem-quote" id="5">EEEEEEEEEEEEEEEEEEEEEEEEEEEEEEE</blockquote>
+          <blockquote class="layui-elem-quote" id="6">FFFFFFFFFFFFFFFF</blockquote>
 
         </div>
       </div>
