--- a/view/doc/add.html
+++ b/view/doc/add.html
@@ -7,9 +7,11 @@
 
         <div class="layui-form-item">
             <label class="layui-form-label">分类</label>
-            <div class="layui-input-block">
+            <div class="layui-input-inline">
                 <select name="cate_id" lay-verify="required" data-select="/api/doc-category.json" data-fields="id,title">
                 </select>
+                <input type="text" name="" class="layui-input">
+                <button type="button" class="layui-btn layui-btn-normal layui-btn-sm">按钮</button>
             </div>
         </div>
 
@@ -19,7 +21,6 @@
                 <input type="text" name="title" class="layui-input" lay-verify="required" placeholder="请输入商品标题" value="">
             </div>
         </div>
-
 
         <div class="layui-form-item">
             <label class="layui-form-label">内容</label>
