--- a/view/task/card.html
+++ b/view/task/card.html
@@ -19,7 +19,7 @@
                 </div>
                 <div class="layui-col-sm12">
                   <div class="datetime" style="text-align: right;">
-                    <span class="layui-badge-rim"><i class="layui-icon layui-icon-log"></i> {{ $v.StartTime }} ~ {{ $v.EndTime }}</span>
+                    <span class="layui-badge-rim"><i class="layui-icon layui-icon-log"></i> {{ $v.StartTime |timeFormat }} ~ {{ $v.EndTime |timeFormat }}</span>
                     <span class="layui-badge-rim"><i class="layui-icon layui-icon-at"></i> {{ $v.User.Realname }}</span>
                   </div>
                 </div>
@@ -45,7 +45,7 @@
                 </div>
                 <div class="layui-col-sm12">
                   <div class="datetime" style="text-align: right;">
-                    <span class="layui-badge-rim"><i class="layui-icon layui-icon-log"></i> {{ $v.StartTime }} ~ {{ $v.EndTime }}</span>
+                    <span class="layui-badge-rim"><i class="layui-icon layui-icon-log"></i> {{ $v.StartTime |timeFormat }} ~ {{ $v.EndTime |timeFormat }}</span>
                     <span class="layui-badge-rim"><i class="layui-icon layui-icon-at"></i> {{ $v.User.Realname }}</span>
                   </div>
                 </div>
@@ -71,7 +71,7 @@
                 </div>
                 <div class="layui-col-sm12">
                   <div class="datetime" style="text-align: right;">
-                    <span class="layui-badge-rim"><i class="layui-icon layui-icon-log"></i> {{ $v.StartTime }} ~ {{ $v.EndTime }}</span>
+                    <span class="layui-badge-rim"><i class="layui-icon layui-icon-log"></i> {{ $v.StartTime |timeFormat }} ~ {{ $v.EndTime |timeFormat }}</span>
                     <span class="layui-badge-rim"><i class="layui-icon layui-icon-at"></i> {{ $v.User.Realname }}</span>
                   </div>
                 </div>
