--- a/view/task/add.html
+++ b/view/task/add.html
@@ -38,27 +38,27 @@
         <div class="layui-form-item">
             <label class="layui-form-label">描述</label>
             <div class="layui-input-block">
-                <textarea name="content" rows="20" class="layui-textarea editor" placeholder="请输入描述"></textarea>
+                <textarea name="content" rows="10" class="layui-textarea editor" placeholder="请输入描述"></textarea>
             </div>
         </div>
 
         <div class="layui-form-item">
-            <label class="layui-form-label">附件</label>
+            <label class="layui-form-label required">分类图片</label>
             <div class="layui-input-block layuimini-upload">
-                <input name="accessory" class="layui-input layui-col-xs6" placeholder="" value="">
+                <input name="image" class="layui-input layui-col-xs6" lay-verify="required"  placeholder="请上传分类图片" value="">
                 <div class="layuimini-upload-btn">
-                    <span><a class="layui-btn" data-upload="logo" data-upload-number="one" data-upload-exts="png|jpg|ico|jpeg" data-upload-icon="image"><i class="fa fa-upload"></i> 上传</a></span>
-                    <span><a class="layui-btn layui-btn-normal" id="select_accessory" data-upload-select="accessory" data-upload-number="one" data-upload-mimetype="image/*"><i class="fa fa-list"></i> 选择</a></span>
+                    <span><a class="layui-btn" data-upload="image" data-upload-number="one" data-upload-exts="png|jpg|ico|jpeg" data-upload-icon="image"><i class="fa fa-upload"></i> 上传</a></span>
+                    <span><a class="layui-btn layui-btn-normal" id="select_image" data-upload-select="image" data-upload-number="one" data-upload-mimetype="image/*"><i class="fa fa-list"></i> 选择</a></span>
                 </div>
             </div>
         </div>
 
 
-        <div class="layui-inline">
-          <label class="layui-form-label">日期范围</label>
-          <div class="layui-input-inline">
-            <input type="text" class="layui-input" id="test1" placeholder=" - " lay-key="7">
-          </div>
+        <div class="layui-form-item">
+            <label class="layui-form-label">日期</label>
+            <div class="layui-input-inline">
+                <input type="text" name="up_date" data-date="" data-date-type="date" data-date-range="~" class="layui-input"  placeholder="请选择日期" value="">
+            </div>
         </div>
 
         <div class="hr-line"></div>
@@ -73,8 +73,6 @@
 <script>
 layui.use('laydate', function(){
   var laydate = layui.laydate;
-  
-  //执行一个laydate实例
   laydate.render({
     elem: '#test1',
     range: true,
