--- a/view/task/add.html
+++ b/view/task/add.html
@@ -43,12 +43,12 @@
         </div>
 
         <div class="layui-form-item">
-            <label class="layui-form-label required">分类图片</label>
+            <label class="layui-form-label required">附件</label>
             <div class="layui-input-block layuimini-upload">
-                <input name="image" class="layui-input layui-col-xs6" lay-verify="required"  placeholder="请上传分类图片" value="">
+                <input name="accessory" class="layui-input layui-col-xs6" placeholder="请上传分类图片" value="">
                 <div class="layuimini-upload-btn">
-                    <span><a class="layui-btn" data-upload="image" data-upload-number="one" data-upload-exts="png|jpg|ico|jpeg" data-upload-icon="image"><i class="fa fa-upload"></i> 上传</a></span>
-                    <span><a class="layui-btn layui-btn-normal" id="select_image" data-upload-select="image" data-upload-number="one" data-upload-mimetype="image/*"><i class="fa fa-list"></i> 选择</a></span>
+                    <span><a class="layui-btn" data-upload="accessory" data-upload-number="one" data-upload-exts="png|jpg|ico|jpeg" data-upload-icon="image"><i class="fa fa-upload"></i> 上传</a></span>
+                    <span><a class="layui-btn layui-btn-normal" id="select_image" data-upload-select="accessory" data-upload-number="one" data-upload-mimetype="image/*"><i class="fa fa-list"></i> 选择</a></span>
                 </div>
             </div>
         </div>
