--- a/view/user/add.html
+++ b/view/user/add.html
@@ -33,8 +33,8 @@
         <div class="layui-form-item">
             <label class="layui-form-label">角色权限</label>
             <div class="layui-input-block">
-               <input type="radio" name="role" lay-skin="primary" title="dev">
-               <input type="radio" name="role" lay-skin="primary" title="design">
+               <input type="radio" name="role" lay-skin="primary" title="dev" value="dev">
+               <input type="radio" name="role" lay-skin="primary" title="design" value="design">
             </div>
         </div>
 
