--- a/view/task/add.html
+++ b/view/task/add.html
@@ -43,7 +43,7 @@
         </div>
 
         <div class="layui-form-item">
-            <label class="layui-form-label required">附件</label>
+            <label class="layui-form-label">附件</label>
             <div class="layui-input-block layuimini-upload">
                 <input name="accessory" class="layui-input layui-col-xs6" placeholder="请上传分类图片" value="">
                 <div class="layuimini-upload-btn">
@@ -55,7 +55,7 @@
 
 
         <div class="layui-form-item">
-            <label class="layui-form-label">日期</label>
+            <label class="layui-form-label required">日期</label>
             <div class="layui-input-inline">
                 <input type="text" name="up_date" data-date="" data-date-type="date" data-date-range="~" class="layui-input"  placeholder="请选择日期" value="">
             </div>
